# ntws_automation

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  __init__.py  pyproject.toml  requirements.txt
actions/: __init__.py  base.py  chart.py  navigation.py  order.py  portfolio.py
config/: __init__.py  default_config.yaml  settings.py
core/: __init__.py  element.py  exceptions.py  window.py
input/: __init__.py  hotkeys.py  keyboard.py  mouse.py
mcp_server/: __init__.py  __main__.py  server.py  tools.py
screen/: __init__.py  capture.py  ocr.py  regions.py
tests/: __init__.py  test_hotkeys.py
utils/: __init__.py  logging.py  retry.py  validation.py
